--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -7,18 +7,18 @@ USE_UPNP?=-
 USE_IPV6:=1
 
 DEPSDIR?=/usr/local
-BOOST_SUFFIX?=-mgw48-mt-s-1_55
+BOOST_SUFFIX?=-mgw48-mt-s-1_53
 
 INCLUDEPATHS?= \
  -I"$(CURDIR)" \
- -I"c:/deps/boost_1_55_0" \
- -I"c:/deps/db-4.8.30.NC/build_unix" \
+ -I"c:/deps/boost_1_53_0" \
+ -I"c:/deps/db-6.0.20.NC/build_unix" \
  -I"c:/deps/openssl-1.0.1g/include"
 
 LIBPATHS?= \
  -L"$(CURDIR)/leveldb" \
- -L"c:/deps/boost_1_55_0/stage/lib" \
- -L"c:/deps/db-4.8.30.NC/build_unix" \
+ -L"c:/deps/boost_1_53_0/stage/lib" \
+ -L"c:/deps/db-6.0.20.NC/build_unix" \
  -L"c:/deps/openssl-1.0.1g"
 
 LIBS= \
@@ -36,7 +36,7 @@ LIBS= \
 DEFS=-D_MT -DWIN32 -DWIN32_LEAN_AND_MEAN -D_WINDOWS -DBOOST_THREAD_USE_LIB -DBOOST_SPIRIT_THREADSAFE
 DEBUGFLAGS=-g
 CFLAGS=${ADDITIONALCCFLAGS} -mthreads -O3 -msse2 -w -Wall -Wextra -Wno-ignored-qualifiers -Wformat -Wformat-security -Wno-unused-parameter $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
-LDFLAGS=-Wl,--dynamicbase -Wl,--nxcompat
+LDFLAGS=-Wl,--dynamicbase -Wl,--nxcompat -Wl,--large-address-aware –static
 
 TESTDEFS = -DTEST_DATA_DIR=$(abspath test/data)
 
